--- a/Audio Player/Base.lproj/Main.storyboard
+++ b/Audio Player/Base.lproj/Main.storyboard
@@ -166,7 +166,7 @@
             </objects>
             <point key="canvasLocation" x="305" y="357"/>
         </scene>
-        <!--Root View Controller-->
+        <!--Audio List Table View Controller-->
         <scene sceneID="aTx-Jk-mZC">
             <objects>
                 <tableViewController id="0cq-Ke-0xx" customClass="AudioListTableViewController" sceneMemberID="viewController">
@@ -200,19 +200,73 @@
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WP7-c8-Pe0">
+                                            <rect key="frame" x="510" y="5" width="82" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="82" id="B1C-LU-ShX"/>
+                                                <constraint firstAttribute="height" constant="30" id="JKG-45-YEU"/>
+                                            </constraints>
+                                            <state key="normal" title="Download"/>
+                                            <connections>
+                                                <action selector="downloadButtonClicked:" destination="0cq-Ke-0xx" eventType="touchUpInside" id="AhX-GK-mQT"/>
+                                            </connections>
+                                        </button>
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="Zhy-qE-uoZ" firstAttribute="leading" secondItem="6Ft-QJ-SX8" secondAttribute="leading" constant="8" id="7Dp-Cd-FnJ"/>
                                         <constraint firstAttribute="bottom" secondItem="Zhy-qE-uoZ" secondAttribute="bottom" constant="2" id="Ais-d2-2Bn"/>
                                         <constraint firstItem="hPt-fT-CSP" firstAttribute="leading" secondItem="6Ft-QJ-SX8" secondAttribute="leading" constant="8" id="EsD-5j-zJZ"/>
+                                        <constraint firstItem="WP7-c8-Pe0" firstAttribute="centerY" secondItem="6Ft-QJ-SX8" secondAttribute="centerY" id="FB8-Xa-Dw6"/>
                                         <constraint firstItem="hPt-fT-CSP" firstAttribute="top" secondItem="6Ft-QJ-SX8" secondAttribute="top" id="XCn-6J-iPA"/>
                                         <constraint firstAttribute="trailing" secondItem="hPt-fT-CSP" secondAttribute="trailing" constant="20" id="ifW-Sb-JCg"/>
+                                        <constraint firstAttribute="trailing" secondItem="WP7-c8-Pe0" secondAttribute="trailing" constant="8" id="jC3-l8-DQ7"/>
                                         <constraint firstAttribute="trailing" secondItem="Zhy-qE-uoZ" secondAttribute="trailing" constant="8" id="oRj-rg-5Ef"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="artistLabel" destination="hPt-fT-CSP" id="ylu-lR-QHT"/>
+                                    <outlet property="downloadButton" destination="WP7-c8-Pe0" id="OZy-q2-T5v"/>
                                     <outlet property="titleLabel" destination="Zhy-qE-uoZ" id="udk-WJ-EXw"/>
+                                </connections>
+                            </tableViewCell>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="DownloadedAudioListCell" id="vnF-dE-Tnv" customClass="DownloadedAudioListTableViewCell">
+                                <rect key="frame" x="0.0" y="136" width="600" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="vnF-dE-Tnv" id="nrI-HN-gsm">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hm4-cG-98X">
+                                            <rect key="frame" x="8" y="0.0" width="280" height="21"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="20" id="xcQ-Hq-DcM"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AeY-cO-2bz">
+                                            <rect key="frame" x="8" y="22" width="584" height="21"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="20" id="OBE-2s-Ktr"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="bottom" secondItem="AeY-cO-2bz" secondAttribute="bottom" constant="2" id="2eh-PV-X75"/>
+                                        <constraint firstItem="Hm4-cG-98X" firstAttribute="leading" secondItem="nrI-HN-gsm" secondAttribute="leading" constant="8" id="4kz-LK-xIQ"/>
+                                        <constraint firstItem="AeY-cO-2bz" firstAttribute="leading" secondItem="nrI-HN-gsm" secondAttribute="leading" constant="8" id="8tc-lm-ijT"/>
+                                        <constraint firstAttribute="trailing" secondItem="AeY-cO-2bz" secondAttribute="trailing" constant="8" id="9JW-pR-QcA"/>
+                                        <constraint firstAttribute="trailing" secondItem="Hm4-cG-98X" secondAttribute="trailing" constant="20" id="IAs-aI-uHc"/>
+                                        <constraint firstItem="Hm4-cG-98X" firstAttribute="top" secondItem="nrI-HN-gsm" secondAttribute="top" id="rLL-O9-Eqg"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="artistLabel" destination="Hm4-cG-98X" id="Lm9-Ex-HY8"/>
+                                    <outlet property="titleLabel" destination="AeY-cO-2bz" id="04i-rX-bqm"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -221,7 +275,25 @@
                             <outlet property="delegate" destination="0cq-Ke-0xx" id="u6O-Jc-BI8"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="0ab-hE-Svc"/>
+                    <navigationItem key="navigationItem" id="0ab-hE-Svc">
+                        <nil key="title"/>
+                        <segmentedControl key="titleView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" id="uOZ-WD-AEg">
+                            <rect key="frame" x="180" y="7" width="240" height="30"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <segments>
+                                <segment title="My audios"/>
+                                <segment title="Downloaded"/>
+                            </segments>
+                            <color key="tintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                            <connections>
+                                <action selector="segmentControlValueChanged:" destination="0cq-Ke-0xx" eventType="valueChanged" id="AOe-Pu-P3U"/>
+                            </connections>
+                        </segmentedControl>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="listTableView" destination="U60-T6-wyV" id="0Qs-V8-h81"/>
+                        <outlet property="segmentControl" destination="uOZ-WD-AEg" id="LZ0-Yy-KjZ"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KBx-P2-Sf7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
